Added PSoC6 folder and assigned pins for PSoC 5LP

--- a/PSoC5LP/.gitignore
+++ b/PSoC5LP/.gitignore
@@ -11,9 +11,9 @@ Backup/
 Docs/
 Release/
 Export/
-*/codegentemp
+*/codegentemp/
 */CortexM3
-*/Generated_Source
+*/Generated_Source/
 *_datasheet.pdf
 *_timing.html
 *.cycdx
